k3s/deployment.yaml
#
# kubectl apply -k .
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama-server
spec:
  replicas: 1
  selector:
    matchLabels:
      component: llama-server
  template:
    metadata:
      labels:
        component: llama-server
    spec:
      volumes:
      - name: "llama-models"
        persistentVolumeClaim:
          claimName: "llama-models"
      containers:
      - name: llama-server
        #  podman run --rm \
        # -p 8080:8080 \
        # -v $PWD/models:/models \
        # localhost/llama-cpp \
        # -m models/$model \
        # --alias $(basename $model .gguf) \
        # --chat-template phi3 \
        # --embeddings \
        # --no-mmap \
        # --log-format text \
        # --host 0.0.0.0 \
        # --metrics \
        # -c 2048 \
        # $*
        image: "localhost/llama-cpp:latest"
        imagePullPolicy: "IfNotPresent"
        # command: ["tail"]
        # args: ["-f", "/dev/null"]
        args:
        - "--model"
        - "/models/stories15M-q4_0.gguf"
        # - "--chat-template"
        # - "phi3"
        - "--embeddings"
        - "--no-mmap"
        - "--host"
        - "0.0.0.0"
        - "--metrics"
        - "--ctx-size"
        - "2048"
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/models"
          name: "llama-models"
---
apiVersion: v1
kind: Service
metadata:
  name: llama-server
spec:
  type: ClusterIP
  selector:
    component: llama-server
  ports:
  - port: 80
    targetPort: 8080
---
#
# We  assume here  that  *.localhost resolves  to  the local  machine.
# Following URL should be directed to corresponding Service, also with
# https:// protocoll:
#
#     http://llama.localhost
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "llama-server"
spec:
  rules:
  - host: "llama-server.localhost"
    http:
      paths:
      - path: "/"
        pathType: "Prefix"
        backend:
          service:
            name: "llama-server"
            port:
              number: 80
